# md2docx

./: .gitignore  main.py  pyproject.toml
src/assets/: default.yaml
src/core/: elements.py  extractor.py  md_writer.py  parser.py  renderer.py  style_map.py
src/template/: doc_filler.py  table_filler.py  template.py
src/util/: __init__.py  file_util.py  md_util.py  net_util.py  str_util.py
src/web/: app.py  routes.py
src/web/static/: style.css
src/web/templates/: index.html
templates/meeting_minutes/: config.yaml  template.docx
tests/: __init__.py  test_extractor.py  test_md_writer.py  test_meeting_minutes.py  test_parser.py  test_renderer.py  test_roundtrip.py  test_template.py
tests/fixtures/: meeting_input.md  sample.md
